--- a/css/styles.css
+++ b/css/styles.css
@@ -119,8 +119,7 @@ span {
     margin-left: auto;
     margin-right: auto;
     width: 1200px;
-    padding-left: 94px;
-    padding-right: 94px;
+   
     
     outline: 2px solid tomato;
 }
@@ -155,13 +154,14 @@ display: flex;
 
 .feature-list .item {
     width: 270px;
-    background-color: tomato;
+    margin-right: 30px;
+    line-height: 24px;
 }
 
 
 .feature-list .title {
     margin-top: 0;
-margin-bottom: 10px;
+    margin-bottom: 10px;
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
@@ -181,9 +181,24 @@ font-weight: 400;
     color: var(--selective-color);
     margin-bottom: 50px;
     padding: 0;
+    margin-right: 30px;
+    
+}
+
+
+
+
+.card-name {
+align-items: center;
+background-color: var(--additional-color);
+border-radius: 0px 0px 4px 4px;
+padding: 30px;
+margin: 0;
 }
 
 .junior-list {
+    display: block;
+    margin-bottom: 10px;
     font-weight: 700;
     font-size: 36px;
     line-height: 1.2;
@@ -267,6 +282,8 @@ span {
 
       /* Портфолио */
 
+
+
 .button-portfolio {
     border: 1px solid transparent;
     display: inline-block;
@@ -288,31 +305,31 @@ span {
     background-color: var(--accent-color);
 }
 
-.flex-container {
+.container-flex {
     display: flex;
     flex-wrap: wrap;
-    width: 1230px;
-    padding-left: 15px;
-    padding-right: 15px;
+    width: 1200px;
+    margin-right: 30px;
     margin-left: auto;
     margin-right: auto;
+     
+    outline: 2px solid tomato;
+    }
     
- 
-}
-
-
 .line {
     border: 1px solid #EEEEEE;
     width: 370px;
-    margin-right: 30px;
-    
+    margin-bottom: 30px;
+    margin-left: 30px;
 }
 
 .line:nth-child(3n) {
     margin-right: 0;
 }
 
-
+.line:nth-last-child(-n + 3) {
+    margin-bottom: 0;
+}
 
 .point {
     font-weight: 700;
