--- a/css/styles.css
+++ b/css/styles.css
@@ -119,9 +119,8 @@ span {
     margin-left: auto;
     margin-right: auto;
     width: 1200px;
-   
-    
-    outline: 2px solid tomato;
+    padding-left: 94px;
+    padding-right: 94px;
 }
 
 /* hero */
@@ -185,15 +184,41 @@ font-weight: 400;
     
 }
 
+.working {
+    display: flex;
+}
 
+.work {
+    margin-right: 30px;
+}
 
+/* Наша команда */
+
+.teams {
+    display: flex;
+}
+
+.team-icon {
+    margin-left: 30px;
+    margin-right: 30px;
+    text-align: center;
+}
+
+.team-icon:last-child {
+    margin-right: 0;
+}
 
 .card-name {
+border: 1px solid #757575;
+border-top: none;
 align-items: center;
 background-color: var(--additional-color);
 border-radius: 0px 0px 4px 4px;
-padding: 30px;
-margin: 0;
+padding-top: 30px;
+padding-bottom: 30px;
+padding-left: 5px;
+padding-right: 5px;
+margin-right: 30px;
 }
 
 .junior-list {
@@ -208,6 +233,8 @@ margin: 0;
 }
 
 .person {
+    text-align: center;
+    width: 270px;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.2;
@@ -216,7 +243,10 @@ margin: 0;
     margin-top: 30px;
 }
 
+
 .profession {
+    text-align: center;
+
     font-size: 16px;
     line-height: 1.2;
     color: var(--primary-text-color);
