--- a/css/styles.css
+++ b/css/styles.css
@@ -25,9 +25,17 @@ ul {
     padding: 0;
 }
 
+h1, h2, h3, h4, h5, h6, p {
+    margin: 0;
+}
+
 .main-nav {
     display: flex;
     align-items: center;
+}
+
+.header {
+    border-bottom: 1px solid #ECECEC;
 }
 
 .logo {
@@ -115,19 +123,26 @@ span {
     color: var(--accent-color);
 }
 
+.header-container {
+    display: flex;
+    align-items: center;
+}
+
 .container {
     margin-left: auto;
     margin-right: auto;
     width: 1200px;
-    padding-left: 94px;
-    padding-right: 94px;
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 /* hero */
 
 .hero {
+padding-top: 200px;
+padding-bottom: 200px;
 text-align: center;
-background: #2F303A;
+background-color: #2F303A;
 }
 
 .hero-title {
@@ -147,19 +162,29 @@ background: #2F303A;
  padding-bottom: 94px;
 }
 
+.feature {
+    padding-bottom: 0;
+}
+
 .feature-list {
 display: flex;
+gap: 30px;
 }
 
 .feature-list .item {
     width: 270px;
-    margin-right: 30px;
+}
+
+.feature-text {
+    line-height: 1.71;
+  
+}
+
+.text {
     line-height: 24px;
 }
 
-
 .feature-list .title {
-    margin-top: 0;
     margin-bottom: 10px;
     font-weight: 700;
     font-size: 14px;
@@ -179,28 +204,28 @@ font-weight: 400;
     text-align: center;
     color: var(--selective-color);
     margin-bottom: 50px;
-    padding: 0;
-    margin-right: 30px;
-    
 }
 
 .working {
     display: flex;
 }
 
-.work {
+.work:not(:last-child) {
     margin-right: 30px;
 }
 
 /* Наша команда */
 
+.team {
+   background-color: #F5F4FA;
+}
+
 .teams {
     display: flex;
+    gap: 30px;
 }
 
 .team-icon {
-    margin-left: 30px;
-    margin-right: 30px;
     text-align: center;
 }
 
@@ -208,22 +233,21 @@ font-weight: 400;
     margin-right: 0;
 }
 
+img {
+    display:block;
+}
+
 .card-name {
-border: 1px solid #757575;
-border-top: none;
-align-items: center;
 background-color: var(--additional-color);
 border-radius: 0px 0px 4px 4px;
 padding-top: 30px;
 padding-bottom: 30px;
 padding-left: 5px;
 padding-right: 5px;
-margin-right: 30px;
 }
 
-.junior-list {
-    display: block;
-    margin-bottom: 10px;
+.junior-title {
+  
     font-weight: 700;
     font-size: 36px;
     line-height: 1.2;
@@ -234,13 +258,11 @@ margin-right: 30px;
 
 .person {
     text-align: center;
-    width: 270px;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.2;
     color: var(--selective-color);
     margin-bottom: 10px;
-    margin-top: 30px;
 }
 
 
@@ -250,11 +272,11 @@ margin-right: 30px;
     font-size: 16px;
     line-height: 1.2;
     color: var(--primary-text-color);
-    margin-bottom: 30px;
 }
 
 .footer {
-    background: var(--footer-bg-color);
+    padding: 60px 0;
+    background-color: var(--footer-bg-color);
 }
 
 .logo-two {
@@ -273,6 +295,8 @@ span {
 }
 
 .address-list {
+    margin-top: 20px;
+    margin-bottom: 9px;
     font-style: normal;
     line-height: 1.71;
     color: var(--additional-color);
@@ -290,21 +314,23 @@ span {
     color:var(--accent-color);
 }
 
+.separator li:not(:last-child) {
+    margin-bottom: 9px;
+}
+
 /* Button */
 
 .button {
-    border: 1px solid transparent;
-    display: inline-block;
+    border: none;
     border-radius: 4px;
     padding: 10px 32px;
     min-width: 200px;
-    margin-bottom: 200px;
     text-align: center;
     font-family: inherit;
     cursor: pointer;
     font-weight: 700;
     font-size: 16px;
-    line-height: 1.2;
+    line-height: 1.88;
     letter-spacing: 0.06em;
     color : var(--button-color);
     background-color: var(--button-bg-color);
@@ -335,23 +361,40 @@ span {
     background-color: var(--accent-color);
 }
 
+.tack {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    margin-bottom: 50px;
+}
+
 .container-flex {
     display: flex;
     flex-wrap: wrap;
-    width: 1200px;
-    margin-right: 30px;
+    gap: 30px;
+}
+
+.container-flex { 
     margin-left: auto;
     margin-right: auto;
-     
-    outline: 2px solid tomato;
-    }
-    
-.line {
-    border: 1px solid #EEEEEE;
-    width: 370px;
-    margin-bottom: 30px;
-    margin-left: 30px;
+    width: 1200px;
+    padding-left: 15px;
+    padding-right: 15px;
+
 }
+
+.line {
+    width: 370px;
+}
+
+
+.line-wrap {
+    padding: 20px 24px;
+    border: 1px solid #EEEEEE;
+    border-top: none;
+}
+
 
 .line:nth-child(3n) {
     margin-right: 0;
@@ -360,6 +403,7 @@ span {
 .line:nth-last-child(-n + 3) {
     margin-bottom: 0;
 }
+
 
 .point {
     font-weight: 700;
