--- a/css/styles.css
+++ b/css/styles.css
@@ -147,7 +147,7 @@ background-color: #2F303A;
 
 .hero-title {
     margin-top: 0;
-    margin-bottom: 30;
+    margin-bottom: 30px;
     font-weight: 900;
     font-size: 44px;
     line-height: 1.4;
